Update technologies section in README

--- a/README
+++ b/README
@@ -24,8 +24,8 @@ This portfolio is designed for:
 
 ## 🧱 Technologies Used
 
-- HTML5
-- CSS3 (Flexbox, Box Models, Media Queries)
+- HTML
+- CSS
 
 ## 📐 Layout & Sections
 
