Update repository clone URL in README

--- a/README
+++ b/README
@@ -54,7 +54,7 @@ The site is optimized for:
 2. In your code editor, open the terminal.
 3. Clone the repository:
    ```bash
-   git clone https://github.com/your-username/portfolio-website.git
+   git clone https: (https://github.com/mahlukm-mars/Lab-Assignment---WEEK06-HCI-LAB)
    ```
 4. Open index.html in your browser, or run the website locally using the Live Server Extension.
 
